<resources>
    <string name="app_name">My Application</string>
    <string name="click">Click</string>
    <string name="click_me">Click Me</string>

    <string name="body_image">body image</string>
    <string name="hi">Hi</string>
    <string name="instagram">Instagram</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="facebook">Facebook</string>
    <string name="english_change">English ~ Change</string>
    <string name="password">Password</string>
    <string name="email_or_phone">Email or phone</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_for_facebook">Sign up for facebook</string>
    <string name="help_center">Help center</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="android_studio">Android studio</string>
    <string name="tennis">Tennis</string>
    <string name="swimming">Swimming</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="context_menu">Context Menu</string>
    <string name="channel_name">2</string>
    <string name="log_out">Log out</string>
    <string name="read_file">Read file</string>
    <string name="product_name">Product name:</string>
    <string name="add">Add</string>
    <string name="view_list">View list:</string>
</resources>