<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F458E"
    tools:context=".FacebookLoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/facebook"
        android:src="@drawable/logofb"

        >

    </ImageView>

    <TextView
        android:id="@+id/textIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/english_change"
        android:textColor="@color/white">

    </TextView>

    <EditText

        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textIntro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:autofillHints="User name"


        android:hint="@string/email_or_phone"
        android:backgroundTint="@color/white"
        android:inputType="text"
        android:paddingTop="10dp"
        android:textColorHint="@color/white"
        tools:ignore="LabelFor">

    </EditText>

    <EditText

        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:autofillHints="Password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="10dp"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        tools:ignore="LabelFor">

    </EditText>

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/blue"

        android:text="@string/sign_in"
        android:textColor="@color/white">

    </Button>

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/sign_up_for_facebook"
        android:textColor="@color/white">

    </TextView>

    <TextView
        android:id="@+id/textHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/textSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/help_center"
        android:textColor="@color/white">

    </TextView>


</RelativeLayout>