<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:layout_marginStart="20dp"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:id="@+id/AddProductActivityTextPName"
            android:autofillHints=""
            android:layout_marginStart="20dp"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginStart="20dp"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:id="@+id/AddProductActivityTextPPrice"
            android:layout_marginStart="20dp"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_marginStart="20dp"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:id="@+id/AddProductActivityTextPQuantity"
            android:layout_marginStart="20dp"/>



    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/AddProductActivityAddBtn"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_list"
        android:id="@+id/AddProductActivityListBtn"
        android:layout_marginTop="20dp"/>

</LinearLayout>